added main view

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,40 +10,7 @@
     <!-- TODO: make sure bootstrap.min.css points to BootTheme generated file
         -->
     <link href="bootstrap.min.css" rel="stylesheet" type="text/css" />
-    <style type="text/css">
-        body {
-            padding-top: 20px;
-            padding-bottom: 40px;
-        }
-        /* Custom container */
-        .container-narrow {
-            margin: 0 auto;
-            max-width: 850px;
-        }
-        .container-narrow > hr {
-            margin: 30px 0;
-        }
-        /* Main marketing message and sign up button */
-        .jumbotron {
-            margin: 60px 0;
-            text-align: center;
-        }
-        .jumbotron h1 {
-            font-size: 72px;
-            line-height: 1;
-        }
-        .jumbotron .btn {
-            font-size: 21px;
-            padding: 14px 24px;
-        }
-        /* Supporting marketing content */
-        .marketing {
-            margin: 60px 0;
-        }
-        .marketing p + h4 {
-            margin-top: 28px;
-        }
-    </style>
+    <link href="/stylesheets/style.css" rel="stylesheet" type="text/css" />
     <!-- TODO: make sure bootstrap-responsive.min.css points to BootTheme
         generated file -->
     <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-responsive.min.css" rel="stylesheet">
@@ -86,13 +53,13 @@
         <hr>
         <div class="row-fluid marketing">
             <div class="span6">
-                <h4>Subheading</h4>
+                <h4>Simplicity</h4>
 
-                <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.
+                <p>Find textbooks, electronics, tutors and more, all in one place.
                 </p>
-                <h4>Subheading</h4>
+                <h4>Campus Only</h4>
 
-                <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
+                <p>All users are verified to have a school email, ensuring all postings are from colleagues.</p>
                 <h4>Subheading</h4>
 
                 <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
