--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,81 @@
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  padding-top: 20px;
+  padding-bottom: 40px;
+}
+/* Custom container */
+.container-narrow {
+  margin: 0 auto;
+  max-width: 850px;
+}
+.container-narrow > hr {
+  margin: 30px 0;
+}
+/* Main marketing message and sign up button */
+.jumbotron {
+  margin: 60px 0;
+  text-align: center;
+}
+.jumbotron h1 {
+  font-size: 72px;
+  line-height: 1;
+}
+.jumbotron .btn {
+  font-size: 21px;
+  padding: 14px 24px;
+}
+/* Supporting marketing content */
+.marketing {
+  margin: 60px 0;
+}
+.marketing p + h4 {
+  margin-top: 28px;
 }
 
-a {
-  color: #00B7FF;
+.price {
+  transition: 0.2s;
+  border-radius: 2px;
+  text-align: center;
+}
+
+.price:active {
+  background-color: #f39c12;
+}
+
+i {
+  color: #2c3e50;
+}
+
+.post {
+  background-color: #2c3e50;
+  transition: background-color 0.2s;
+  cursor: pointer;
+  padding-bottom: 21px;
+}
+
+.post:hover {
+  background-color: #34495e;
+}
+.post:active {
+  background-color: #3498db;
+}
+
+.post-container {
+  overflow: hidden;
+  border-radius: 8px;
+}
+
+.end-post {
+  margin-top: 0;
+  margin-bottom: 0;
+  box-shadow: 1px;
+}
+
+@media (max-width: 767px) {
+  .post {
+    text-align: center;
+  }
+  .price {
+    width: 100px;
+    margin-left: calc(50% - 50px);
+  }
 }
