--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -70,6 +70,17 @@ i {
   box-shadow: 1px;
 }
 
+#login-dropdown-menu{
+  left: -124px;
+  padding: 15px;
+}
+
+#login-dropdown-menu > input{
+  margin-top: 5px;
+}
+
+
+
 @media (max-width: 767px) {
   .post {
     text-align: center;
