--- a/views/main.ejs
+++ b/views/main.ejs
@@ -35,7 +35,7 @@
                     <a href="#"><i class="fa fa-plus-circle fa-lg"></i></a>
                 </li>
                 <li>
-                    <a href="#"><i class="fa fa-cog fa-lg"></i></a>
+                    <a href="#" id="logout"><i class="fa fa-cog fa-lg"></i></a>
                 </li>
             </ul>
             <h3 class="muted">School Craigslist</h3>
