--- a/views/main.ejs
+++ b/views/main.ejs
@@ -50,34 +50,16 @@
               </div>
               <div class="col-sm-2 bg-success price"><h4>$85</h4></div>
             </div> <!-- end post -->
-              <hr class="end-post row">
+            <hr class="end-post row">
+            <% for (var i = 0; i < posts.length; i++) {  %>
             <div class="row post">
-              <div class="col-sm-10"><h3>Title</h3>
-                <div class="row"><div class="col-sm-10"><h5>Description</h5></div></div>
+              <div class="col-sm-10"><h3><%= posts[i].title%></h3>
+                <div class="row"><div class="col-sm-10"><h5><%= posts[i].description%></h5></div></div>
               </div>
-              <div class="col-sm-2 bg-success price"><h4>Free</h4></div>
+              <div class="col-sm-2 bg-success price"><h4>$<%= posts[i].price%></h4></div>
             </div> <!-- end post -->
-             <hr class="end-post row">
-            <div class="row post">
-              <div class="col-sm-10"><h3>Title</h3>
-                <div class="row"><div class="col-sm-10"><h5>Description</h5></div></div>
-              </div>
-              <div class="col-sm-2 bg-success price"><h4>Free</h4></div>
-            </div> <!-- end post -->
-             <hr class="end-post row">
-            <div class="row post">
-              <div class="col-sm-10"><h3>Title</h3>
-                <div class="row"><div class="col-sm-10"><h5>Description</h5></div></div>
-              </div>
-              <div class="col-sm-2 bg-success price"><h4>Free</h4></div>
-            </div> <!-- end post -->
-             <hr class="end-post row">
-            <div class="row post">
-              <div class="col-sm-10"><h3>Title</h3>
-                <div class="row"><div class="col-sm-10"><h5>Description</h5></div></div>
-              </div>
-              <div class="col-sm-2 bg-success price"><h4>Free</h4></div>
-            </div> <!-- end post -->
+            <hr class="end-post row">
+            <% } %>
           </div>
 
 
