--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -80,6 +80,24 @@ i {
 }
 
 
+.modal-backdrop {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: #000000;
+}
+
+.modal-backdrop.fade {
+  opacity: 0;
+}
+
+.modal-backdrop, .modal-backdrop.fade.in {
+  opacity: 0.8;
+  filter: alpha(opacity=80);
+}
+
 
 @media (max-width: 767px) {
   .post {
