--- a/views/main.ejs
+++ b/views/main.ejs
@@ -32,15 +32,41 @@
         <div class="masthead">
             <ul class="nav nav-pills pull-right">
                 <li>
-                    <a href="#"><i class="fa fa-plus-circle fa-lg"></i></a>
+                    <a href="#" id="create" data-toggle="modal" data-target="#create-modal"><i class="fa fa-plus-circle fa-lg"></i></a>
                 </li>
                 <li>
                     <a href="#" id="logout"><i class="fa fa-cog fa-lg"></i></a>
                 </li>
             </ul>
             <h3 class="muted">School Craigslist</h3>
-
         </div>
+
+      <!-- Modal -->
+      <div class="modal fade" id="create-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+              <h4 class="modal-title" id="myModalLabel">Create a Post</h4>
+            </div>
+            <div class="modal-body">
+              <input class="form-control" type="text" placeholder="Title">
+              <input class="form-control" type="text" placeholder="Description">
+              <input class="form-control" type="number" placeholder="Cost">
+              <select class='form-control categories'>
+                <% for (var i = 0; i < categories.length; i++) {  %>
+                  <option value="<%= categories[i].id %>"><%= categories[i].name %></option>
+                <% } %>
+              </select>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
         <hr>
         <div class="row">
           <div class="col-md-8 col-md-offset-2 bg-primary post-container">        
@@ -52,13 +78,13 @@
             </div> <!-- end post -->
             <hr class="end-post row">
             <% for (var i = 0; i < posts.length; i++) {  %>
-            <div class="row post">
-              <div class="col-sm-10"><h3><%= posts[i].title%></h3>
-                <div class="row"><div class="col-sm-10"><h5><%= posts[i].description%></h5></div></div>
+              <div class="row post">
+                <div class="col-sm-10"><h3><%= posts[i].title%></h3>
+                  <div class="row"><div class="col-sm-10"><h5><%= posts[i].description%></h5></div></div>
+                </div>
+                <div class="col-sm-2 bg-success price"><h4>$<%= posts[i].price%></h4></div>
               </div>
-              <div class="col-sm-2 bg-success price"><h4>$<%= posts[i].price%></h4></div>
-            </div> <!-- end post -->
-            <hr class="end-post row">
+              <hr class="end-post row">
             <% } %>
           </div>
 
