--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,8 +33,8 @@
                 <li class="dropdown">
                   <a class="dropdown-toggle" href="#" data-toggle="dropdown">Sign In <strong class="caret"></strong></a>
                   <div class="dropdown-menu" id="login-dropdown-menu">
-                    <input class="form-control" type="text" placeholder="Email" id="login-email">
-                    <input class="form-control" type="password" placeholder="Password" id="login-password">
+                    <input class="form-control" name="email" type="text" placeholder="Email" id="login-email">
+                    <input class="form-control" name="password" type="password" placeholder="Password" id="login-password">
                     <input class="form-control btn btn-primary btn-block" type="button" id="login-submit" value="Sign In">
                   </div>
                 </li>
