--- a/views/main.ejs
+++ b/views/main.ejs
@@ -49,19 +49,19 @@
               <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
               <h4 class="modal-title" id="myModalLabel">Create a Post</h4>
             </div>
-            <div class="modal-body">
-              <input class="form-control" type="text" placeholder="Title">
-              <input class="form-control" type="text" placeholder="Description">
-              <input class="form-control" type="number" placeholder="Cost">
-              <select class='form-control categories'>
-                <% for (var i = 0; i < categories.length; i++) {  %>
+            <div class="modal-body" id="create-form">
+              <input class="form-control create-title" type="text" placeholder="Title">
+              <input class="form-control create-description" type="text" placeholder="Description">
+              <input class="form-control create-price" type="number" placeholder="Price">
+              <select class='form-control create-categories'>
+                <% for (var i = 0; i < categories.length; i++) { %>
                   <option value="<%= categories[i].id %>"><%= categories[i].name %></option>
                 <% } %>
               </select>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-              <button type="button" class="btn btn-primary">Save changes</button>
+              <button type="button" id="create-submit" class="btn btn-primary">Save changes</button>
             </div>
           </div>
         </div>
@@ -78,7 +78,7 @@
             </div> <!-- end post -->
             <hr class="end-post row">
             <% for (var i = 0; i < posts.length; i++) {  %>
-              <div class="row post">
+              <div class="row post" data-id="<%= posts[i].id %>">
                 <div class="col-sm-10"><h3><%= posts[i].title%></h3>
                   <div class="row"><div class="col-sm-10"><h5><%= posts[i].description%></h5></div></div>
                 </div>
