fixed bug with _.extend

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -41,7 +41,7 @@
             <h3 class="muted">School Craigslist</h3>
         </div>
 
-      <!-- Modal -->
+      <!-- Create Modal -->
       <div class="modal fade" id="create-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog">
           <div class="modal-content">
