--- a/views/main.ejs
+++ b/views/main.ejs
@@ -20,7 +20,7 @@
             <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
     <!-- Fav and touch icons -->
-    <link rel="shortcut icon" href="../assets/ico/favicon.ico">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="../assets/ico/apple-touch-icon-144-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../assets/ico/apple-touch-icon-114-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../assets/ico/apple-touch-icon-72-precomposed.png">
@@ -75,17 +75,14 @@
               <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
               <h4 class="modal-title">Post Title</h4>
             </div>
-            <div class="modal-body">
-            description  description  description description description description description description description
-            </div>
+            <div class="modal-body"></div>
             <div class="modal-footer">
               <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-              <button type="button" class="btn btn-success" data-dismiss="modal">Contact</button>
+              <button type="button" class="btn btn-success">Contact</button>
             </div>
           </div>
         </div>
       </div>
-
         <hr>
         <div class="row">
           <div class="col-md-8 col-md-offset-2 bg-primary post-container">
@@ -100,8 +97,6 @@
               <hr class="end-post row">
             <% } %>
           </div>
-
-
         </div>
         <hr>
         <div class="footer">
