added parsely form validation

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -105,8 +105,9 @@
     </div>
     <!-- /container -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
+    <script src="/javascripts/jquery.min.js"></script>
+    <script src="/javascripts/bootstrap.min.js"></script>
+    <script src="/javascripts/parsley.min.js"></script>
     <script src="/javascripts/main.js"></script>
 </body>
 
