--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,15 +34,17 @@
               <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
               <h4 class="modal-title">Sign Up</h4>
             </div>
-            <div class="modal-body" id="signup-form">
-              <input class="form-control" type="email" placeholder="University Email">
-              <input class="form-control" type="password" placeholder="Password">
-              <input class="form-control" type="password" placeholder="Confirm Password">
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-              <button type="button" id="signup-submit" class="btn btn-primary">Submit</button>
-            </div>
+            <form id="signup-form">
+              <div class="modal-body">
+                  <input class="form-control" id="signup-email" type="email" placeholder="University Email" required>
+                  <input class="form-control" id="signup-password" type="password" placeholder="Password" required data-parsley-minlength="6">
+                  <input class="form-control" id="signup-password-confirm" type="password" placeholder="Confirm Password" required data-parsley-equalto="#signup-password">
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="submit" id="signup-submit" class="btn btn-primary">Submit</button>
+              </div>
+            </form>
           </div>
         </div>
   </div>
@@ -96,13 +98,14 @@
       </div>
       <hr>
       <div class="footer">
-          <p>&copy; Company 2013</p>
+          <p>&copy; School Craigslist 2014</p>
       </div>
   </div>
   <!-- /container -->
   <!-- Placed at the end of the document so the pages load faster -->
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-  <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
+  <script src="/javascripts/jquery.min.js"></script>
+  <script src="/javascripts/bootstrap.min.js"></script>
+  <script src="/javascripts/parsley.min.js"></script>
   <script src="/javascripts/index.js"></script>
 </body>
 
