--- a/views/main.ejs
+++ b/views/main.ejs
@@ -49,20 +49,22 @@
               <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
               <h4 class="modal-title" id="myModalLabel">Create a Post</h4>
             </div>
-            <div class="modal-body" id="create-form">
-              <input class="form-control create-title" type="text" placeholder="Title">
-              <input class="form-control create-description" type="text" placeholder="Description">
-              <input class="form-control create-price" type="number" placeholder="Price">
-              <select class='form-control create-categories'>
-                <% for (var i = 0; i < categories.length; i++) { %>
-                  <option value="<%= categories[i].id %>"><%= categories[i].name %></option>
-                <% } %>
-              </select>
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-              <button type="button" id="create-submit" class="btn btn-primary">Save changes</button>
-            </div>
+            <form id="create-form">
+              <div class="modal-body">
+                <input class="form-control create-title" required type="text" placeholder="Title">
+                <input class="form-control create-description" required type="text" placeholder="Description">
+                <input class="form-control create-price" required type="number" placeholder="Price">
+                <select class='form-control create-categories' required>
+                  <% for (var i = 0; i < categories.length; i++) { %>
+                    <option value="<%= categories[i].id %>"><%= categories[i].name %></option>
+                  <% } %>
+                </select>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="submit" id="create-submit" class="btn btn-primary">Save changes</button>
+              </div>
+            </form>
           </div>
         </div>
       </div>
