added contact link

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -80,7 +80,7 @@
             <div class="modal-body"></div>
             <div class="modal-footer">
               <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-              <button type="button" class="btn btn-success">Contact</button>
+              <a id="modal-contact" href="https://mail.google.com/mail/?view=cm&fs=1&to=someone@example.com&su=SUBJECT&body=BODY" target="_blank" class="btn btn-success">Contact</a>
             </div>
           </div>
         </div>
