--- a/views/main.ejs
+++ b/views/main.ejs
@@ -97,17 +97,8 @@
           </div>
         </div>
         <div class="row">
-          <div class="post-container col-md-8 col-md-offset-2 bg-primary">
-            <% for (var i = 0; i < posts.length; i++) {  %>
-              <div class="row post" data-id="<%= posts[i].id %>">
-                <div class="col-sm-10"><h3><%= posts[i].title%></h3>
-                  <div class="row"><div class="col-sm-10"><h5><%= posts[i].description%></h5></div></div>
-                </div>
-                <% var price = posts[i].price > 0 ? '$' + posts[i].price : 'Free'; %>
-                <div class="col-sm-2 bg-success price"><h4><%= price %></h4></div>
-              </div>
-              <hr class="end-post row">
-            <% } %>
+          <div id="post-container" class="col-md-8 col-md-offset-2 bg-primary">
+            <% include ../public/templates/posts.ejs %>
           </div>
         </div>
         <hr>
@@ -120,6 +111,7 @@
     <script src="/javascripts/jquery.min.js"></script>
     <script src="/javascripts/bootstrap.min.js"></script>
     <script src="/javascripts/parsley.min.js"></script>
+    <script src="/javascripts/ejs_production.js"></script>
     <script src="/javascripts/main.js"></script>
 </body>
 
