--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>School Craigslist</title>
+    <title>Bazaar</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -70,13 +70,13 @@
                 </div>
               </li>
           </ul>
-          <h3 class="muted">School Craigslist</h3>
+          <h3 class="muted">Bazaar</h3>
       </div>
       <hr>
       <div class="jumbotron">
           <h1>A marketplace for students</h1>
 
-          <p class="lead">School Craigslist is a place to buy and sell everyday items exclusively on campus.</p>
+          <p class="lead">Bazaar is a place to buy and sell everyday items exclusively on campus.</p>
           <a class="btn btn-large btn-success" data-toggle="modal" data-target="#signup-modal" id="signup">Sign up today</a>
       </div>
       <hr>
@@ -108,7 +108,7 @@
       </div>
       <hr>
       <div class="footer">
-          <p>&copy; School Craigslist 2014</p>
+          <p>&copy; Bazaar 2014</p>
       </div>
   </div>
   <!-- /container -->
