--- a/views/main.ejs
+++ b/views/main.ejs
@@ -42,13 +42,13 @@
         <div class="masthead">
             <ul class="nav nav-pills pull-right">
                 <li>
-                    <a href="#" id="create" data-toggle="modal" data-target="#create-modal"><i class="fa fa-plus-circle fa-2x"></i></a>
+                    <a href="#" id="create" data-toggle="modal" data-target="#create-modal"><i class="fa fa-plus-circle fa-lg"></i></a>
                 </li>
                 <li>
-                    <a href="#" id="logout"><i class="fa fa-cog fa-2x"></i></a>
+                    <a href="#" id="logout"><i class="fa fa-cog fa-lg"></i></a>
                 </li>
             </ul>
-            <h3 class="muted">School Craigslist</h3>
+            <h3 class="muted">Bazaar</h3>
         </div>
 
       <!-- Create Modal -->
@@ -113,7 +113,7 @@
         </div>
         <hr>
         <div class="footer">
-            <p>&copy; School Craigslist 2014</p>
+            <p>&copy; Bazaar 2015</p>
         </div>
     </div>
     <!-- /container -->
