preloading images and caching DOM elements

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -32,6 +32,7 @@
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
     
       ga('create', 'UA-58300675-1', 'auto');
+      ga('require', 'displayfeatures');
       ga('send', 'pageview');
     
     </script>
@@ -90,6 +91,7 @@
               <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
               <h4 class="modal-title">Post Title</h4>
             </div>
+            <img class="modal-image" height="200" width="200">
             <div class="modal-body"></div>
             <div class="modal-footer">
               <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
