--- a/public/templates/posts.ejs
+++ b/public/templates/posts.ejs
@@ -1,5 +1,9 @@
 <% for (var i = 0; i < posts.length; i++) {  %>
-  <div class="row post" data-id="<%= posts[i].id %>">
+  <div class="row post" data-id="<%= posts[i].id %>"
+    <% if (posts[i].photos[0]){ %>
+      data-photo="<%= posts[i].photos[0].id %>"
+    <% } %>
+  >
     <div class="col-sm-10"><h3><%= posts[i].title%></h3>
       <div class="row"><div class="col-sm-10"><h5><%= posts[i].description%></h5></div></div>
     </div>
