--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,6 +31,7 @@
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
     
       ga('create', 'UA-58300675-1', 'auto');
+      ga('require', 'displayfeatures');
       ga('send', 'pageview');
     
     </script>
