--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -43,10 +43,6 @@ h5{
   text-align: center;
 }
 
-.price:active {
-  background-color: #f39c12;
-}
-
 i {
   color: #2c3e50;
 }
@@ -74,6 +70,18 @@ i {
   margin-top: 0;
   margin-bottom: 0;
   box-shadow: 1px;
+}
+
+.delete{
+  color: #2c3e50;
+  cursor: pointer;
+  opacity: 0.4;
+  float: right;
+  margin: 2px;
+  margin-right: 10px;
+}
+.delete:hover{
+  opacity: 1;
 }
 
 #login-dropdown-menu{
@@ -179,4 +187,8 @@ textarea.parsley-success {
     background: white;
     cursor: inherit;
     display: block;
+}
+
+.sweet-overlay{
+  background-color: rgba(0,0,0,0.8) !important;
 }
