--- a/views/main.ejs
+++ b/views/main.ejs
@@ -115,7 +115,11 @@
         </div>
         <div class="row">
           <div id="post-container" class="col-md-8 col-md-offset-2 bg-primary">
-            <% include ../public/templates/posts.ejs %>
+            <% if (posts[0]) { %>
+              <% include ../public/templates/posts.ejs %>
+            <% } else { %>
+              No posts
+            <% } %>
           </div>
         </div>
         <hr>
