prevents zoom on mobile

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -4,7 +4,8 @@
   <head>
     <meta charset="utf-8">
     <title>Main Page</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimum-scale=1" />
+
     <meta name="description" content="">
     <meta name="author" content="">
     <!-- TODO: make sure bootstrap.min.css points to BootTheme generated file
