--- a/views/index.ejs
+++ b/views/index.ejs
@@ -75,36 +75,23 @@
       </div>
       <hr>
       <div class="jumbotron">
-          <h1>A marketplace for students</h1>
-
+          <h1>A market for students</h1>
           <p class="lead">Bazaar is a place to buy and sell everyday items exclusively on campus.</p>
           <a class="btn btn-large btn-success" data-toggle="modal" data-target="#signup-modal" id="signup">Sign up today</a>
       </div>
       <hr>
       <div class="row-fluid marketing">
           <div class="span6">
-              <h4>Simplicity</h4>
-
-              <p>Find textbooks, electronics, tutors and more, all in one place.
-              </p>
-              <h4>Campus Only</h4>
-
-              <p>All users are verified to have a school email, ensuring all postings are from colleagues.</p>
-              <h4>Subheading</h4>
-
-              <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+              <h4>Simple</h4>
+              <p>Search and filter postings to find textbooks, jobs, roomates, and much more. All in one place.</p>
+              <h4>Exclusive</h4>
+              <p>All users are verified students, ensuring our postings are from friendly peers.</p>
           </div>
           <div class="span6">
-              <h4>Subheading</h4>
-
-              <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.
-              </p>
-              <h4>Subheading</h4>
-
-              <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
-              <h4>Subheading</h4>
-
-              <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+              <h4>Secure</h4>
+              <p>Gone are the days of dealing with randos off. Rest easy knowing there is a friendly face on the other end!</p>
+              <h4>Free</h4>
+              <p>Bazaar is an free service to students, and always will be.</p>
           </div>
       </div>
       <hr>
