--- a/views/main.ejs
+++ b/views/main.ejs
@@ -136,6 +136,6 @@
     <script src="/javascripts/uuid.js"></script>
     <script src="/javascripts/ejs_production.js"></script>
     <script src="/javascripts/sweet-alert.min.js"></script>
-    <script src="/javascripts/main.js"></script>
+    <script src="/javascripts/main.min.js"></script>
   </body>
 </html>
