--- a/views/index.ejs
+++ b/views/index.ejs
@@ -104,7 +104,7 @@
   <script src="/javascripts/jquery.min.js"></script>
   <script src="/javascripts/bootstrap.min.js"></script>
   <script src="/javascripts/parsley.min.js"></script>
-  <script src="/javascripts/index.js"></script>
+  <script src="/javascripts/index.min.js"></script>
 </body>
 
 </html>
