loads minified css

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -11,7 +11,7 @@
     <!-- TODO: make sure bootstrap.min.css points to BootTheme generated file
         -->
     <link href="bootstrap.min.css" rel="stylesheet" type="text/css" />
-    <link href="stylesheets/style.css" rel="stylesheet" type="text/css" />
+    <link href="stylesheets/style.min.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" type="text/css" href="stylesheets/sweet-alert.css">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <!-- TODO: make sure bootstrap-responsive.min.css points to BootTheme
