--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
     <!-- TODO: make sure bootstrap.min.css points to BootTheme generated file
         -->
     <link href="bootstrap.min.css" rel="stylesheet" type="text/css" />
-    <link href="/stylesheets/style.css" rel="stylesheet" type="text/css" />
+    <link href="/stylesheets/style.min.css" rel="stylesheet" type="text/css" />
     <!-- TODO: make sure bootstrap-responsive.min.css points to BootTheme
         generated file -->
     <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-responsive.min.css" rel="stylesheet">
