--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -84,6 +84,10 @@ i {
   opacity: 1;
 }
 
+.nav-pills{
+  margin-top: -6px;
+}
+
 #login-dropdown-menu{
   left: -124px;
   padding: 15px;
@@ -128,6 +132,9 @@ i {
 
 
 @media (max-width: 983px) {
+  .jumbotron h1{
+    font-size: 65px;
+  }
   .marketing p + h4 {
     margin-top: 0;
   }
