--- a/views/main.ejs
+++ b/views/main.ejs
@@ -33,7 +33,7 @@
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
     
-      ga('create', 'UA-58300675-1', 'auto');
+      ga('create', 'UA-58300675-1', {'userID': '<%=userID%>'});
       ga('require', 'displayfeatures');
       ga('send', 'pageview');
     
