--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="utf-8">
     <title>Bazaar</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimum-scale=1" />
+    <meta name="description" content="A Market For Students">
+    <meta name="author" content="Bazaar Markets">
     <!-- TODO: make sure bootstrap.min.css points to BootTheme generated file
         -->
     <link href="bootstrap.min.css" rel="stylesheet" type="text/css" />
@@ -29,13 +28,11 @@
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-    
       ga('create', 'UA-58300675-1', 'auto');
       ga('require', 'displayfeatures');
       ga('send', 'pageview');
-    
     </script>
-</head>
+  </head>
 
 <body>
   <div class="modal fade" id="signup-modal" tabindex="-1" role="dialog" aria-hidden="true">
