--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,6 +7,10 @@ h5{
   font-size: 17px;
 }
 
+.btn-info{
+  background-color: #2980b9;
+}
+
 /* Custom container */
 .container-narrow {
   margin: 0 auto;
@@ -58,7 +62,7 @@ i {
   background-color: #34495e;
 }
 .post:active {
-  background-color: #3498db;
+  background-color: #2980b9;
 }
 
 #post-container {
@@ -91,6 +95,16 @@ i {
 #login-dropdown-menu{
   left: -124px;
   padding: 15px;
+}
+
+#settings-dropdown-menu > li > a:hover{
+  background-color: #2980b9;
+}
+
+#settings-dropdown-menu{
+  left: -113px;
+  padding-top: 0;
+  padding-bottom: 0;
 }
 
 #login-dropdown-menu > input{
