--- a/views/main.ejs
+++ b/views/main.ejs
@@ -46,7 +46,11 @@
                     <a href="#" id="create" data-toggle="modal" data-target="#create-modal"><i class="fa fa-plus-circle fa-lg"></i></a>
                 </li>
                 <li>
-                    <a href="#" id="logout"><i class="fa fa-cog fa-lg"></i></a>
+                  <a href="#" id="settings" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-cog fa-lg"></i></a>
+                  <ul class="dropdown-menu" id="settings-dropdown-menu">
+                  <li><a href="#">Settings</a></li>
+                  <li><a href="#" id="logout">Log out</a></li>
+                </ul>
                 </li>
             </ul>
             <h3 class="muted">Bazaar</h3>
@@ -70,7 +74,7 @@
                     <option value="<%= categories[i].id %>"><%= categories[i].name %></option>
                   <% } %>
                 </select>
-                <span class="btn btn-default btn-file form-control">
+                <span class="btn btn-info btn-file form-control">
                   Upload an Image <input id='create-file' type="file">
                 </span>
               </div>
