--- a/views/main.ejs
+++ b/views/main.ejs
@@ -9,6 +9,7 @@
     <!-- TODO: make sure bootstrap.min.css points to BootTheme generated file
         -->
     <link href="bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <link href="https://bootflat.github.io/bootflat/css/bootflat.css" rel="stylesheet" type="text/css" />
     <link href="stylesheets/style.min.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" type="text/css" href="stylesheets/sweet-alert.css">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
@@ -40,21 +41,40 @@
   <body>
     <input type="hidden" id="user-id" value="<%=userID%>"></input>
     <div class="container">
-        <div class="masthead">
-            <ul class="nav nav-pills pull-right">
-                <li>
-                    <a href="#" id="create" data-toggle="modal" data-target="#create-modal"><i class="fa fa-plus-circle fa-lg"></i></a>
-                </li>
-                <li>
-                  <a href="#" id="settings" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-cog fa-lg"></i></a>
-                  <ul class="dropdown-menu" id="settings-dropdown-menu">
+      <div class="col-xs-12">
+        <nav class="navbar navbar-default" role="navigation">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-01">
+              <span class="sr-only">Toggle navigation</span>
+            </button>
+            <a class="navbar-brand" href="#">Bazaar</a>
+          </div>
+          <div class="collapse navbar-collapse" id="navbar-collapse-01">
+            <ul class="nav navbar-nav navbar-right">
+              <li>
+                <a href="#" id="create" data-toggle="modal" data-target="#create-modal"><i class="fa fa-plus-circle fa-lg"></i></a>
+              </li>
+              <li>
+                <a href="#" id="settings" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-cog fa-lg"></i></a>
+                <ul class="dropdown-menu" id="settings-dropdown-menu">
                   <li><a href="#">Settings</a></li>
                   <li><a href="#" id="logout">Log out</a></li>
                 </ul>
-                </li>
-            </ul>
-            <h3 class="muted">Bazaar</h3>
-        </div>
+              </li>
+             </ul>
+             <form class="navbar-form navbar-right navbar-search" action="#" role="search">
+              <div class="form-group">
+                <div class="input-group">
+                  <input class="form-control" type="search" placeholder="Search">
+                  <span class="input-group-btn">
+                    <button type="submit" class="btn"><i class="fa fa-search"></i></button>
+                  </span>
+                </div>
+              </div>
+            </form>
+          </div><!-- /.navbar-collapse -->
+        </nav><!-- /navbar -->
+      </div>
 
       <!-- Create Modal -->
       <div class="modal fade" id="create-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -134,6 +154,9 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="/javascripts/jquery.min.js"></script>
     <script src="/javascripts/bootstrap.min.js"></script>
+    <script src="https://bootflat.github.io/bootflat/js/icheck.min.js"></script>
+    <script src="https://bootflat.github.io/bootflat/js/jquery.fs.selecter.min.js"></script>
+    <script src="https://bootflat.github.io/bootflat/js/jquery.fs.stepper.min.js"></script>
     <script src="/javascripts/parsley.min.js"></script>
     <script src="/javascripts/uuid.js"></script>
     <script src="/javascripts/ejs_production.js"></script>
