--- a/views/main.ejs
+++ b/views/main.ejs
@@ -41,39 +41,36 @@
   <body>
     <input type="hidden" id="user-id" value="<%=userID%>"></input>
     <div class="container">
-      <div class="col-xs-12">
-        <nav class="navbar navbar-default" role="navigation">
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-01">
-              <span class="sr-only">Toggle navigation</span>
-            </button>
+      <div class="row">
+        <div class="col-xs-12">
+          <nav class="navbar navbar-default" role="navigation">
             <a class="navbar-brand" href="#">Bazaar</a>
-          </div>
-          <div class="collapse navbar-collapse" id="navbar-collapse-01">
-            <ul class="nav navbar-nav navbar-right">
-              <li>
-                <a href="#" id="create" data-toggle="modal" data-target="#create-modal"><i class="fa fa-plus-circle fa-lg"></i></a>
-              </li>
-              <li>
-                <a href="#" id="settings" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-cog fa-lg"></i></a>
-                <ul class="dropdown-menu" id="settings-dropdown-menu">
-                  <li><a href="#">Settings</a></li>
-                  <li><a href="#" id="logout">Log out</a></li>
-                </ul>
-              </li>
-             </ul>
-             <form class="navbar-form navbar-right navbar-search" action="#" role="search">
-              <div class="form-group">
-                <div class="input-group">
-                  <input class="form-control" type="search" placeholder="Search">
-                  <span class="input-group-btn">
-                    <button type="submit" class="btn"><i class="fa fa-search"></i></button>
-                  </span>
+            <div class="">
+              <ul class="nav navbar-nav navbar-right mynavbar">
+                <li>
+                  <a href="#" id="create" data-toggle="modal" data-target="#create-modal"><i class="fa fa-plus-circle fa-lg"></i></a>
+                </li>
+                <li>
+                  <a href="#" id="settings" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-cog fa-lg"></i></a>
+                  <ul class="dropdown-menu" id="settings-dropdown-menu">
+                    <li><a href="#">Settings</a></li>
+                    <li><a href="#" id="logout">Log out</a></li>
+                  </ul>
+                </li>
+               </ul>
+               <form class="navbar-form navbar-right navbar-search" action="#" role="search">
+                <div class="form-group">
+                  <div class="input-group">
+                    <input class="form-control" type="search" placeholder="Search">
+                    <span class="input-group-btn">
+                      <button type="submit" class="btn"><i class="fa fa-search"></i></button>
+                    </span>
+                  </div>
                 </div>
-              </div>
-            </form>
-          </div><!-- /.navbar-collapse -->
-        </nav><!-- /navbar -->
+              </form>
+            </div><!-- /.navbar-collapse -->
+          </nav><!-- /navbar -->
+        </div>
       </div>
 
       <!-- Create Modal -->
@@ -125,7 +122,6 @@
           </div>
         </div>
       </div>
-        <hr>
         <div class="row">
           <div class="col-md-2 col-md-offset-8">
             <select class="form-control" id="category-filter">
